--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,16 +1,4 @@
-log4j.rootCategory=INFO, stdout
-
-log4j.appender.stdout=org.springframework.data.document.mongodb.log4j.MongoLog4jAppender
+log4j.category.org.springframework=DEBUG, stdout
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - <%m>%n
-log4j.appender.stdout.host = localhost
-log4j.appender.stdout.port = 27017
-log4j.appender.stdout.database = logs
-log4j.appender.stdout.collectionPattern = %X{year}%X{month}
-log4j.appender.stdout.applicationId = my.application
-log4j.appender.stdout.warnOrHigherWriteConcern = FSYNC_SAFE
-
-log4j.category.org.apache.activemq=ERROR
-log4j.category.org.springframework.batch=DEBUG
-log4j.category.org.springframework.data.document.mongodb=DEBUG
-log4j.category.org.springframework.transaction=INFO
+log4j.appender.stdout.layout.ConversionPattern=%-5p | %d{yyyy-MM-dd HH:mm:ss} | [%t] %C{1} (%F:%L) - %m%n
